--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
@@ -17,6 +17,8 @@
     "react": "^0.0.0-experimental-709f94841",
     "react-dom": "^0.0.0-experimental-709f94841",
     "react-icons": "^4.2.0",
+    "react-virtualized-auto-sizer": "^1.0.5",
+    "react-window": "^1.8.6",
     "sass": "^1.32.8"
   },
   "devDependencies": {
